// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@atlaskit/page-header should renders correctly 1`] = `
.c0 {
  margin: 24px 0 0;
}

.c4 {
  font-size: 1.7142857142857142em;
  font-style: inherit;
  line-height: 1.1666666666666667;
  font-weight: 500;
  letter-spacing: -0.01em;
  margin-top: 40px;
  line-height: 32px;
  margin-top: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  margin-left: -4px;
}

.c2 {
  align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: space-between;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  -webkit-justify-content: space-between;
  margin-bottom: 24px;
}

.c3 {
  min-width: 0%;
  flex-shrink: 1;
  -ms-flex-negative: 1;
  -webkit-flex-shrink: 1;
  width: 100%;
}

.c5 {
  white-space: nowrap;
  padding-left: 32px;
  min-width: 0%;
  flex-shrink: 0;
  -ms-flex-negative: 0;
  -webkit-flex-shrink: 0;
}

.c6 {
  margin-bottom: 16px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
     
    <div>
      Breadcrumb
    </div>
     
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <h1
        className="c4"
      >
        Test
      </h1>
    </div>
    <div
      className="c5"
    >
      <div>
        Action
      </div>
    </div>
  </div>
  <div
    className="c6"
  >
     
    <div>
      Bar
    </div>
     
  </div>
</div>
`;

exports[`@atlaskit/page-header should renders correctly with disableTitleStyles prop 1`] = `
.c0 {
  margin: 24px 0 0;
}

.c1 {
  margin-left: -4px;
}

.c2 {
  align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: space-between;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  -webkit-justify-content: space-between;
  margin-bottom: 24px;
}

.c3 {
  min-width: 0%;
  flex-shrink: 1;
  -ms-flex-negative: 1;
  -webkit-flex-shrink: 1;
  width: 100%;
}

.c4 {
  white-space: nowrap;
  padding-left: 32px;
  min-width: 0%;
  flex-shrink: 0;
  -ms-flex-negative: 0;
  -webkit-flex-shrink: 0;
}

.c5 {
  margin-bottom: 16px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
     
    <div>
      Breadcrumb
    </div>
     
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      Test
    </div>
    <div
      className="c4"
    >
      <div>
        Action
      </div>
    </div>
  </div>
  <div
    className="c5"
  >
     
    <div>
      Bar
    </div>
     
  </div>
</div>
`;
